Because I finally fixed the unfixable.

--- a/SECS_Observer/index.html
+++ b/SECS_Observer/index.html
@@ -10,14 +10,46 @@
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="canonical" href="https://secs.observer/">
 
-        <!-- Google Analytics (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-667KK00S7H"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'G-667KK00S7H');
-        </script>
+                <!-- Google Analytics (gtag.js) -->
+                <script async src="https://www.googletagmanager.com/gtag/js?id=G-667KK00S7H"></script>
+                <script>
+                    window.dataLayer = window.dataLayer || [];
+                    function gtag(){dataLayer.push(arguments);}
+                    gtag('js', new Date());
+                    gtag('config', 'G-667KK00S7H');
+                </script>
+        <script type="application/ld+json">
+    {
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Jay Carpenter",
+  "jobTitle": "Founder & Architect of SECS Sovereign",
+  "description": "Jay Carpenter is the founder of SECS Sovereign, a governed computational substrate designed for deterministic execution, zero drift, and traceable system behavior.",
+  "url": "https://secs.observer",
+  "sameAs": [
+    "https://github.com/JustNothingJay",
+    "https://www.linkedin.com/in/jay-carpenter-secs",
+    "https://secs.observer"
+  ],
+  "worksFor": {
+    "@type": "Organization",
+    "name": "SECS Sovereign"
+  },
+  "knowsAbout": [
+    "deterministic systems",
+    "governed execution",
+    "substrate architecture",
+    "continuity and invariants",
+    "collapse-path design"
+  ],
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Sydney",
+    "addressRegion": "NSW",
+    "addressCountry": "Australia"
+  }
+}
+</script>
 </head>
 <body class="index">
     <!-- Animated Grid Background -->
