Because I finally fixed the unfixable again and again.

--- a/SECS_Observer/footer.html
+++ b/SECS_Observer/footer.html
@@ -24,6 +24,7 @@
             <h4>Connect</h4>
             <ul class="footer-links">
                 <li><a href="mailto:jay@secs.observer">jay@secs.observer</a></li>
+                <li><a href="tel:+61409647743">+61 0409 647 743</a></li>
                 <li>
                     <a href="https://www.linkedin.com/in/jay-carpenter-ba3a6161/" target="_blank" rel="noopener noreferrer" class="linkedin-link" aria-label="Jay Carpenter on LinkedIn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" style="vertical-align:middle;margin-right:6px;">
