--- a/SECS_Observer/deeper-secs.html
+++ b/SECS_Observer/deeper-secs.html
@@ -60,10 +60,10 @@
         <div class="doctrine-grid">
 
 <section class="secsy-card">
-    <h2>The 24‑Hour Governed Burn</h2>
+    <h2>The 24-Hour Governed Burn</h2>
     <p>
-        A continuous 24‑hour execution burn validated the substrate’s core guarantees: 
-        determinism, collapse correctness, timing‑envelope stability, and purity under 
+        A continuous 24-hour execution burn validated the substrate's core guarantees: 
+        determinism, collapse correctness, timing-envelope stability, and purity under 
         uninterrupted load. Governed mode held <strong>4.0 RPS exactly</strong> with 
         <strong>0.00 stdev</strong>, demonstrating that drift is not merely controlled — 
         it is structurally impossible.
@@ -71,7 +71,7 @@
     <p>
         No burst leakage, jitter accumulation, or envelope violations occurred across the 
         entire burn. The substrate maintained perfect temporal discipline, proving that 
-        governed execution is not probabilistic or best‑effort, but a deterministic 
+        governed execution is not probabilistic or best-effort, but a deterministic 
         physics with measurable invariants.
     </p>
     <p>
@@ -92,10 +92,10 @@
     <p>
         This separation is not enforced through heuristics or scheduling tricks. It is a 
         doctrinal boundary: governed mode inherits invariants, while ungoverned mode 
-        inherits freedom. Neither can influence the other’s behaviour.
+        inherits freedom. Neither can influence the other's behaviour.
     </p>
     <p>
-        The result is a substrate where purity is preserved even in mixed‑mode environments. 
+        The result is a substrate where purity is preserved even in mixed-mode environments. 
         Mode separation is therefore not a feature — it is a structural truth.
     </p>
 </section>
@@ -110,7 +110,7 @@
     <p>
         The substrate actively rejects behaviours that violate determinism or continuity. 
         Impurity is not tolerated, mitigated, or compensated for — it is eliminated through 
-        collapse or non‑admission.
+        collapse or non-admission.
     </p>
     <p>
         This demonstrates that purity is not a target state but a maintained condition. 
@@ -122,18 +122,18 @@
 <section class="secsy-card">
     <h2>The Permatest Beacon</h2>
     <p>
-        The Permatest Beacon is the substrate’s continuous integrity test — a live probe 
+        The Permatest Beacon is the substrate's continuous integrity test — a live probe 
         that validates deterministic timing envelopes, state transitions, and stability 
         fingerprints. During the burn, it recorded ~33.6 µs average latency with zero 
         envelope violations.
     </p>
     <p>
         The beacon does not measure performance; it measures truth. It confirms that the 
-        substrate’s behaviour remains invariant across time, load, and topology.
+        substrate's behaviour remains invariant across time, load, and topology.
     </p>
     <p>
         As long as the beacon holds, the substrate is considered stable. Any deviation 
-        triggers investigation, collapse, or isolation to preserve the truth‑state.
+        triggers investigation, collapse, or isolation to preserve the truth-state.
     </p>
 </section>
 
@@ -141,16 +141,16 @@
     <h2>Deterministic Dispatch</h2>
     <p>
         Dispatch remained invariant under load, topology, and time. Workers executed 
-        without drift, jitter, or topology‑dependent behaviour. Determinism held across 
+        without drift, jitter, or topology-dependent behaviour. Determinism held across 
         all execution windows.
     </p>
     <p>
         This behaviour proves that dispatch is not influenced by identity, locality, or 
-        probabilistic fairness. It is governed by invariant‑safe rules that produce the 
+        probabilistic fairness. It is governed by invariant-safe rules that produce the 
         same outcome regardless of external conditions.
     </p>
     <p>
-        Deterministic dispatch is therefore a cornerstone of the substrate’s physics — 
+        Deterministic dispatch is therefore a cornerstone of the substrate's physics — 
         a guarantee that execution paths remain stable and predictable.
     </p>
 </section>
@@ -160,7 +160,7 @@
     <p>
         Divergence was detected, isolated, and collapsed before it could propagate. 
         Collapse is not an error — it is a governance instrument that restores invariants 
-        and preserves the substrate’s truth‑state.
+        and preserves the substrate's truth-state.
     </p>
     <p>
         Collapse boundaries define the limits of acceptable behaviour. When a workload 
@@ -168,7 +168,7 @@
     </p>
     <p>
         This ensures that impurity cannot accumulate, drift cannot spread, and the 
-        substrate’s lived history remains coherent.
+        substrate's lived history remains coherent.
     </p>
 </section>
 
@@ -176,7 +176,7 @@
     <h2>Continuity Markers</h2>
     <p>
         Continuity markers are deterministic checkpoints that anchor narrative closure, 
-        replay points, and reconciliation boundaries. They ensure that the substrate’s 
+        replay points, and reconciliation boundaries. They ensure that the substrate's 
         lived history remains coherent and auditable.
     </p>
     <p>
@@ -190,7 +190,7 @@
 </section>
 
 <section class="secsy-card">
-    <h2>Topology‑Free Behaviour</h2>
+    <h2>Topology-Free Behaviour</h2>
     <p>
         The substrate executed identically across all worker topologies. No noisy 
         neighbours, no scheduling heuristics, no probabilistic fairness. Behaviour 
@@ -201,25 +201,25 @@
         determinism. Execution is governed by invariants, not by infrastructure.
     </p>
     <p>
-        Topology‑free behaviour is therefore a signature of the substrate’s physics — 
+        Topology-free behaviour is therefore a signature of the substrate's physics — 
         a guarantee that execution remains stable even as the environment changes.
     </p>
 </section>
 
 <section class="secsy-card">
-    <h2>Identity‑Free Execution</h2>
+    <h2>Identity-Free Execution</h2>
     <p>
         The substrate does not know identity, tenancy, or routing. It knows only 
         behaviour, mode, and invariants. This enables deterministic fairness and 
-        eliminates identity‑dependent drift.
+        eliminates identity-dependent drift.
     </p>
     <p>
         By removing identity from execution, the substrate prevents bias, leakage, and 
         behavioural contamination. All workloads are evaluated solely on their 
-        alignment with truth‑conditions.
+        alignment with truth-conditions.
     </p>
     <p>
-        Identity‑free execution is therefore a doctrinal requirement: fairness emerges 
+        Identity-free execution is therefore a doctrinal requirement: fairness emerges 
         from ignorance, and determinism emerges from constraint.
     </p>
 </section>
@@ -229,62 +229,11 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="footer-container">
-
-            <div class="footer-section">
-                <h3>SECS Sovereign</h3>
-                <p class="footer-tagline">
-                    Deterministic substrate. Governed continuity. Truth‑aligned computation.
-                </p>
-            </div>
-
-            <div class="footer-section">
-                <h4>Doctrine</h4>
-                <ul class="footer-links">
-                    <li><a href="/doctrinal-secs.html">SECS Doctrinally</a></li>
-                    <li><a href="/deeper-secs.html">Deeper SECS</a></li>
-                    <li><a href="/x-true.html">x = true</a></li>
-                    <li><a href="/truth-model.html">Truth Model</a></li>
-                    <li><a href="/becoming-sovereign.html">Becoming Sovereign</a></li>
-                </ul>
-            </div>
-
-            <div class="footer-section">
-                <h4>Connect</h4>
-                    <ul class="footer-links">
-                    <li><a href="mailto:jay@secs.observer">jay@secs.observer</a></li>
-                    <li>
-                        <a href="https://www.linkedin.com/in/jay-carpenter-ba3a6161/" target="_blank" rel="noopener noreferrer" class="linkedin-link" aria-label="Jay Carpenter on LinkedIn">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" style="vertical-align:middle;margin-right:6px;">
-                                <path d="M4.98 3.5C4.98 4.88 3.88 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1 4.98 2.12 4.98 3.5zM0 8h5v16H0zM7 8h4.8v2.2h.1c.7-1.3 2.4-2.6 4.9-2.6C23 7.6 24 12 24 16.9V24H19v-6.5c0-1.6 0-3.7-2.3-3.7S14 16 14 17.8V24H9V8z" />
-                            </svg>
-                            Jay Carpenter
-                        </a>
-                    </li>
-                </ul>
-
-                <div class="footer-contact-blurb">
-                    <h5>Connect With the Substrate</h5>
-                    <p>
-                        SECS Sovereign is built on continuity, governance, and narrative clarity —
-                        and so is the way we communicate. If you’re exploring the doctrine, seeking
-                        alignment, or initiating a propagation event, reach out directly.<br><br>
-
-                        Every inquiry becomes part of the lived history of the system.<br><br>
-                        No noise. No drift. Just signal.<br><br>
-        <div id="footer"></div>
-        <script>
-          fetch('/footer.html')
-            .then(r => r.text())
-            .then(html => document.getElementById('footer').innerHTML = html);
-        </script>
-            <p>© <span id="year"></span> SECS Sovereign. All rights governed.</p>
-        </div>
-    </footer>
-
+    <div id="footer"></div>
     <script>
-        document.getElementById('year').textContent = new Date().getFullYear();
+      fetch('/footer.html')
+        .then(r => r.text())
+        .then(html => document.getElementById('footer').innerHTML = html);
     </script>
 
     <script src="assets/js/main.js?v=3"></script>
