Because I decided to give it a real face

--- a/SECS_Observer/footer.html
+++ b/SECS_Observer/footer.html
@@ -22,9 +22,11 @@
 
         <div class="footer-section">
             <h4>Connect</h4>
-            <ul class="footer-links">
+            <ul class="footer-links footer-links-split">
                 <li><a href="mailto:jay@secs.observer">jay@secs.observer</a></li>
                 <li><a href="tel:+61409647743">+61 0409 647 743</a></li>
+            </ul>
+            <ul class="footer-links">
                 <li>
                     <a href="https://www.linkedin.com/in/jay-carpenter-ba3a6161/" target="_blank" rel="noopener noreferrer" class="linkedin-link" aria-label="Jay Carpenter on LinkedIn">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true" style="vertical-align:middle;margin-right:6px;">
@@ -39,7 +41,7 @@
                 <h5>Connect With the Substrate</h5>
                 <p>
                     SECS Sovereign is built on continuity, governance, and narrative clarity —
-                    and so is the way we communicate. If you’re exploring the doctrine, seeking
+                    and so is the way we communicate. If you're exploring the doctrine, seeking
                     alignment, or initiating a propagation event, reach out directly.<br><br>
 
                     Every inquiry becomes part of the lived history of the system.<br><br>
